# chess-polling-game

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .gitignore  backend.Dockerfile  gunicorn_config.py  pyproject.toml
backend/app/: __init__.py
backend/app/services/game/: methods.py  models.py  structs.py  views.py
backend/app/utils/: config.py  errors.py  games.py  middleware.py  parsers.py  timer.py
backend/tests/: conftest.py
backend/tests/fixtures/: fixture_client.py  fixture_redis.py
backend/tests/test_api/: test_vote.py
frontend/: frontend.Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/api/: index.ts
frontend/src/components/: AboutModal.tsx  MatchesModal.tsx  MovePill.tsx  PlayerInfo.tsx  WelcomeModal.tsx
frontend/src/hooks/: useBoardState.ts  useGame.ts  useRecaptcha.ts  useSendVote.ts  useVoting.ts
frontend/src/i18n/: config.ts  en.json  pt.json
